update styles, reposition blog post links, remove opengazette scraping, remove search bar from ZA-FS and add FS notice, revert style for thumbnails

--- a/about.html
+++ b/about.html
@@ -18,36 +18,30 @@ pagetag: About Open Gazettes
 
   <section>
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
-
-
-<section>
-    <div class="row icons-section">
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
-        <p>Using open gazettes as a journalist</p>
-        <p class="due">5 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" width="64px" />
-        <p>Using open gazettes as civil society</p>
-        <p class="due">6 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-      <img class="icons-cta" src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" width="64px" />
-      <p>Nuclear procurement through the lens of government gazettes</p>
-      <p class="due">10 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/browser.png" alt="Putting together opengazettes.org.za" width="64px" />
-        <p>Putting together opengazettes.org.za</p>
-        <p class="due">11 Oct 2016</p>
-      </div>
-    </div>
+      <p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa.</p>
+      <p>Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
+      <a class="readmore" href="#" target="_blank">Read more</a>
   </section>
 
-
-      <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
-      <a class="readmore" href="#" target="_blank">Read more</a>
+  <section>
+    <div class="row icons-section">
+        <div class="col-xs-6 col-sm-3">
+            <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" />
+            <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+            <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" />
+            <p><a href="#" target="_blank">Using open gazettes as civil society</a><br><span class="text-muted">6 Oct 2016</span></p>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+            <img class="icons-cta" src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" />
+            <p><a href="#" target="_blank">Nuclear procurement through the lens of government gazettes</a><br><span class="text-muted">10 Oct 2016</span></p>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+            <img class="icons-cta" src="img/icons/browser.png" alt="Putting together opengazettes.org.za" />
+            <p><a href="#" target="_blank">Putting together opengazettes.org.za</a><br><span class="text-muted">11 Oct 2016</span></p>
+        </div>
+    </div>
   </section>
 
   <section>
