--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@ layout: base
           <a class="readmore" href="#" target="_blank">Read more</a>
         </div>
 
-          <div class="row icons-section">
-            <div class="col-sm-6">
-                <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
-                <p>Using open gazettes as a journalist</p>
-                <p class="due">5 Oct 2016</p>
-            </div>
-            <div class="col-sm-6">
-                <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" width="64px" />
-                <p>Using open gazettes as civil society</p>
-                <p class="due">6 Oct 2016</p>
-            </div>
+        <div class="row icons-section">
+          <div class="col-sm-6">   
+              <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" />
+              <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
           </div>
+          <div class="col-sm-6">
+              <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" />
+              <p><a href="#" target="_blank">Using open gazettes as civil society</a><br><span class="text-muted">6 Oct 2016</span></p>
+          </div>
+        </div>
 
       </div>
     </div>
