--- a/join.html
+++ b/join.html
@@ -9,45 +9,39 @@ pagetag: How to join the liberation
 			<div class="banner">
 				<img src="/img/hands.png" width="60%" />
 				<a href="#join-form" class="big-cta">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
-				<a class="readmore" href="#" target="_blank">Read more</a>
 			</div>
 		</div>
 
 		<div class="join_intro">
 				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa, and we need your help.</p>
 
-
-<section>
-    <div class="row icons-section">
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
-        <p>Using open gazettes as a journalist</p>
-        <p class="due">5 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" width="64px" />
-        <p>Using open gazettes as civil society</p>
-        <p class="due">6 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-      <img class="icons-cta" src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" width="64px" />
-      <p>Nuclear procurement through the lens of government gazettes</p>
-      <p class="due">10 Oct 2016</p>
-      </div>
-      <div class="col-xs-6 col-sm-3">
-        <img class="icons-cta" src="img/icons/browser.png" alt="Putting together opengazettes.org.za" width="64px" />
-        <p>Putting together opengazettes.org.za</p>
-        <p class="due">11 Oct 2016</p>
-      </div>
-    </div>
- </section>
-
-
-
 				<p>If you have any government gazettes, in any format (hard copy, PDF, scan, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk.</p>
+
+        <a class="readmore" href="#" target="_blank">Read more</a>
 
 				<h2>Why are gazettes important?</h2>
 				<p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
+
+        <section>
+            <div class="row icons-section">
+                <div class="col-xs-6 col-sm-3">
+                    <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" />
+                    <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" />
+                    <p><a href="#" target="_blank">Using open gazettes as civil society</a><br><span class="text-muted">6 Oct 2016</span></p>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <img class="icons-cta" src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" />
+                    <p><a href="#" target="_blank">Nuclear procurement through the lens of government gazettes</a><br><span class="text-muted">10 Oct 2016</span></p>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <img class="icons-cta" src="img/icons/browser.png" alt="Putting together opengazettes.org.za" />
+                    <p><a href="#" target="_blank">Putting together opengazettes.org.za</a><br><span class="text-muted">11 Oct 2016</span></p>
+                </div>
+            </div>
+        </section>
 
 				<h2>What's in a gazette?</h2>
 				<p>Gazettes contain information like government announcements, by-laws, name changes, corporate agreements and liquidations, land claims, court orders, tenders and more. </p>
