change breaking news icon to notepad and update on subsequent pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
 
         <div class="row icons-section">
           <div class="col-sm-6">   
-              <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" />
+              <img class="icons-cta" src="img/icons/notebook.png" alt="Using open gazettes as a journalist" />
               <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
           </div>
           <div class="col-sm-6">
