--- a/join.html
+++ b/join.html
@@ -25,7 +25,7 @@ pagetag: How to join the liberation
         <section>
             <div class="row icons-section">
                 <div class="col-xs-6 col-sm-3">
-                    <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" />
+                    <img class="icons-cta" src="img/icons/notebook.png" alt="Using open gazettes as a journalist" />
                     <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
                 </div>
                 <div class="col-xs-6 col-sm-3">
