comment out blog posts and read mores until published,

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@ pagetag: About Open Gazettes
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
       <p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa.</p>
       <p>Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
-      <a class="readmore" href="#" target="_blank">Read more</a>
+      <!-- <a class="readmore" href="#" target="_blank">Read more</a> -->
   </section>
 
-  <section>
+  <!-- <section>
     <div class="row icons-section">
         <div class="col-xs-6 col-sm-3">
             <img class="icons-cta" src="img/icons/notebook.png" alt="Using open gazettes as a journalist" />
@@ -42,7 +42,7 @@ pagetag: About Open Gazettes
             <p><a href="#" target="_blank">Putting together opengazettes.org.za</a><br><span class="text-muted">11 Oct 2016</span></p>
         </div>
     </div>
-  </section>
+  </section> -->
 
   <section>
       <h2 id="contact-us">Contact us</h2>
