--- a/join.html
+++ b/join.html
@@ -17,12 +17,12 @@ pagetag: How to join the liberation
 
 				<p>If you have any government gazettes, in any format (hard copy, PDF, scan, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk.</p>
 
-        <a class="readmore" href="#" target="_blank">Read more</a>
+                <!-- <a class="readmore" href="#" target="_blank">Read more</a> -->
 
 				<h2>Why are gazettes important?</h2>
 				<p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
 
-        <section>
+        <!-- <section>
             <div class="row icons-section">
                 <div class="col-xs-6 col-sm-3">
                     <img class="icons-cta" src="img/icons/notebook.png" alt="Using open gazettes as a journalist" />
@@ -41,7 +41,7 @@ pagetag: How to join the liberation
                     <p><a href="#" target="_blank">Putting together opengazettes.org.za</a><br><span class="text-muted">11 Oct 2016</span></p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 				<h2>What's in a gazette?</h2>
 				<p>Gazettes contain information like government announcements, by-laws, name changes, corporate agreements and liquidations, land claims, court orders, tenders and more. </p>
