--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ layout: base
         <div class="banner">
           <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
           <a href="/join" class="big-cta">Join the Gazette Liberation&nbsp;<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
-          <a class="readmore" href="#" target="_blank">Read more</a>
+          <!-- <a class="readmore" href="#" target="_blank">Read more</a> -->
         </div>
 
-        <div class="row icons-section">
+        <!-- <div class="row icons-section">
           <div class="col-sm-6">   
               <img class="icons-cta" src="img/icons/notebook.png" alt="Using open gazettes as a journalist" />
               <p><a href="#" target="_blank">Using open gazettes as a journalist</a><br><span class="text-muted">5 Oct 2016</span></p>
@@ -25,7 +25,7 @@ layout: base
               <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" />
               <p><a href="#" target="_blank">Using open gazettes as civil society</a><br><span class="text-muted">6 Oct 2016</span></p>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
