--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@ pagetag: About Open Gazettes
 
   <section>
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
-      <p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa.</p>
+      <p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and the <a target="_blank" href="https://investigativecenters.org/">African Networks of Centers for Investigative Reporting</a> (ANCIR), with support from <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a>, are building the biggest collection of freely available gazettes in South Africa.</p>
+
       <p>Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
       <!-- <a class="readmore" href="#" target="_blank">Read more</a> -->
   </section>
@@ -88,7 +89,7 @@ pagetag: About Open Gazettes
       <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Sun City, North West by <a href="https://www.flickr.com/photos/south-african-tourism/19910947343" target="_blank">South African Tourism</a> on Flickr</p>
       <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Durban, Kwa-zulu Natal by <a href="https://commons.wikimedia.org/wiki/File:Durban_beach.jpg" target="_blank">Steve Roetz</a> on Wikimedia</p>
       <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Upington, Northen Cape by <a href="https://commons.wikimedia.org/wiki/File:Upington.jpg" target="_blank">Rick Walker</a> on Wikimedia</p>
-      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Kruger National Park, Mpumalanga<a href="https://commons.wikimedia.org/wiki/File:Giraffes_in_Kruger_National_Park_02.JPG" target="_blank">Kore</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Kruger National Park, Mpumalanga <a href="https://commons.wikimedia.org/wiki/File:Giraffes_in_Kruger_National_Park_02.JPG" target="_blank">Kore</a> on Wikimedia</p>
       <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Cape Town, Western Cape by <a href="https://pixabay.com/en/cape-town-table-mountain-waterfront-1562907/" target="_blank">HPBotha</a> on Pixabay</p>
       </div>
   </section>
