--- a/join.html
+++ b/join.html
@@ -13,7 +13,7 @@ pagetag: How to join the liberation
 		</div>
 
 		<div class="join_intro">
-				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa, and we need your help.</p>
+				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and the <a target="_blank" href="https://investigativecenters.org/">African Networks of Centers for Investigative Reporting</a> (ANCIR), with support from <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a>, are building the biggest collection of freely available gazettes in South Africa.</p>
 
 				<p>If you have any government gazettes, in any format (hard copy, PDF, scan, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk.</p>
 
