Use new archive location archive.opengazettes.org.za

--- a/about.html
+++ b/about.html
@@ -59,14 +59,14 @@ pagetag: About Open Gazettes
 
       <p>This is an atom feed of the 100 most recently added gazettes. This is useful to put into your feed reader to find out when we add new gazettes.</p>
       <ul class="fa-ul">
-        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom</a></li>
+        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://archive.opengazettes.org.za/recently-added.atom" target="_blank">http://archive.opengazettes.org.za/recently-added.atom</a></li>
       </ul>
 
       <h3>All gazettes atom feed</h3>
 
       <p>This is an atom feed of ALL gazettes. Take care, this is currently over 10MB big.</p>
       <ul class="fa-ul">
-        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom</a></li>
+        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://archive.opengazettes.org.za/all.atom" target="_blank">http://archive.opengazettes.org.za/all.atom</a></li>
       </ul>
 
       <h3>JSON index</h3>
@@ -74,7 +74,7 @@ pagetag: About Open Gazettes
       <p>This is an index of the metadata of all gazettes in our collection is available in the <a href="http://jsonlines.org/">JSON lines</a> format, one
       gazette per line.</p>
       <ul class="fa-ul">
-        <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/index/gazette-index-latest.jsonlines">http://code4sa-gazettes.s3.amazonaws.com/archive/index/gazette-index-latest.jsonlines</a></li>
+        <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://archive.opengazettes.org.za/index/gazette-index-latest.jsonlines">http://archive.opengazettes.org.za/index/gazette-index-latest.jsonlines</a></li>
       </ul>
 
   </section>
