--- a/about.html
+++ b/about.html
@@ -47,13 +47,13 @@ pagetag: About Open Gazettes
 
   <section>
       <h2 id="contact-us">Contact us</h2>
-      <p>If you would like to get in touch or contribute gazettes, you can contact us on <a href="mailto:gazettes@code4sa.org"">gazettes@code4sa.org</a> or go to <a href="/join">opengazettes.org.za/join</a> and complete the #GazetteLiberation form.</p>
+      <p>If you would like to get in touch or contribute gazettes, you can contact us on <a href="mailto:gazettes@openup.org.za"">gazettes@openup.org.za</a> or go to <a href="/join">opengazettes.org.za/join</a> and complete the #GazetteLiberation form.</p>
   </section>
 
   <section>
       <h2>API access to the gazettes</h2>
 
-      <p>There are a few ways of getting the gazettes programatically. If you need help please email <a href="mailto:gazettes@code4sa.org">gazettes@code4sa.org</a>.</p>
+      <p>There are a few ways of getting the gazettes programatically. If you need help please email <a href="mailto:gazettes@openup.org.za">gazettes@openup.org.za</a>.</p>
 
       <h3>Recently added gazettes atom feed</h3>
 
