transvaal on homepage

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@ layout: base
             </a>
           </div>
         </div>
+        <h3>Former provinces</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <a class="btn_p" href="/gazettes/ZA-transvaal/">
+              <button class="gazettes_nav_btn btn_tv" name="button">
+                <span class="btn_text">Transvaal</span>
+              </button>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
