--- a/terms.html
+++ b/terms.html
@@ -116,9 +116,10 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
       <a href="#6b">6. Use</a>
       <a href="#7b">7. Sharing and disclosure</a>
       <a href="#8b">8. Security</a>
-      <a href="#9b">9. Retention</a>
-      <a href="#10b">10. Transfer</a>
-      <a href="#11b">11. Updating or removing</a>
+			<a href="#9b">9. Storage</a>
+			<a href="#10b">10. Retention</a>
+			<a href="#11b">11. Transfer</a>
+			<a href="#12b">12. Updating or removing</a>
     </div>
 
     <h3 id="1b">1. Purpose</h3>
@@ -145,13 +146,16 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
     <h3 id="8b">8. Security</h3>
     <p>Our website is hosted on a secure server and uses reasonable security measures to prevent unauthorized interference by intruders.</p>
 
-    <h3 id="9b">9. Retention</h3>
-    <p>We will only retain your personal information for as long as is necessary.</p>
+    <h3 id="9b">9. Storage</h3>
+		<p>We may store your personal information on servers that are not in South Africa. When doing so, your personal information is transmitted and stored using reasonable security measures to prevent unauthorized access and interference.</p>
+		
+		<h3 id="10b">10. Retention</h3>
+		<p>We will only retain your personal information for as long as is necessary.</p>
 
-    <h3 id="10b">10. Transfer</h3>
-    <p>We may transfer your personal information outside South Africa to a foreign country.</p>
+		<h3 id="11b">11. Transfer</h3>
+		<p>We may transfer your personal information outside South Africa to a foreign country.</p>
 
-    <h3 id="11b">11. Updating or removing</h3>
-    You may choose to update or remove the personal information you have submitted to us by contacting us at <a href="mailto:gazettes@openup.org.za">gazettes@openup.org.za</a>.
+		<h3 id="12b">12. Updating or removing</h3>
+    <p>You may choose to update or remove the personal information you have submitted to us by contacting us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
   </div>
 </section>
