Inform users about gazettes.africa and then redirect them

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: base
 ---
 <div class="introduction">
   <div class="container">
+    {% include gazettes_africa_notice.html %}
     <div class="row">
       <div class="col-sm-6">
         <img src="/img/banner_5.png" style="width:100%;" />
