Start replacing privacy policy in html

--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,7 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
         <ul>
           <li><a href="#terms">terms of use and service</a> – which you agree to by visiting this website and using the services we provide on the website;</li>
           <li><a href="#privacy">privacy policy</a> – which you agree to by visiting the website and using the services we provide on it.</li>
-        </ul> 
+        </ul>
         <p>We may change any of these terms at any time by updating this web page and placing a notice in a prominent place on the website. If you have any questions about our legal terms, please <a href="/about#contact-us">contact us</a>.</p>
       </div>
     </div>
@@ -108,54 +108,136 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
 
     <h2 id="privacy">Privacy Policy</h2>
     <div class="table-of-content">
-      <a href="#1b">1. Purpose</a>
-      <a href="#2b">2. Personal information</a>
-      <a href="#3b">3. Acceptance</a>
-      <a href="#4b">4. Purpose for collection</a>
-      <a href="#5b">5. Consent to collection</a>
-      <a href="#6b">6. Use</a>
-      <a href="#7b">7. Sharing and disclosure</a>
-      <a href="#8b">8. Security</a>
-			<a href="#9b">9. Storage</a>
-			<a href="#10b">10. Retention</a>
-			<a href="#11b">11. Transfer</a>
-			<a href="#12b">12. Updating or removing</a>
+      <a href="#1b">1. </a>
+      <a href="#2b">2. </a>
+      <a href="#3b">3. </a>
+      <a href="#4b">4. </a>
+      <a href="#5b">5. </a>
+      <a href="#6b">6. </a>
+      <a href="#7b">7. </a>
+      <a href="#8b">8. </a>
+      <a href="#9b">9. </a>
+      <a href="#10b">10. </a>
+      <a href="#11b">11. </a>
+      <a href="#12b">12. </a>
     </div>
 
-    <h3 id="1b">1. Purpose</h3>
-    <p>This policy describes the way we handle your personal information when you visit our website or use the services we provide.</p>
+    <h3>Our POPIA Cheatsheet</h3>
 
-    <h3 id="2b">2. Personal information</h3>
-    <p>Personal information includes information you may provide to us when you sign up to our website or newsletter, or automatically when you visit our website or use the services. Personal information does not include de-identified or anonymous information. We may also collect mainly analytical data, including from cookies, web beacons and your browser directly.</p>
+    <p>The Protection of Personal Information Act (POPIA) is intended to protect a person’s right to privacy in terms of your personal information and data. Personal information is not private per se, and POPIA doesn’t say you cannot process it in general, but rather outlines how you need to process it (if you do) to stay within the bounds of the law. There is an online version of the Act available here. Here is also a cheat sheet on how to read POPIA itself:</p>
 
-    <h3 id="3b">3. Acceptance</h3>
-    <p>You may not use any of our services or visit the website if you do not accept this policy.</p>
+    <ul>
+      <li>Chapter 3 sets out the main conditions for lawful Processing of Personal Information.
+      </li>
+      <li>There may be specific internal limitations within different sections.
+      </li>
+      <li>Chapter 3 provides for general rules applicable to the Processing of Personal Information in Part A (sections 8 to 25 of POPIA).
+      </li>
+      <li>There are also special conditions applicable to the Processing of Special Personal Information (in Part B: sections 26 to 33 of POPIA) and the Personal Information concerning a Child / children (in Part C: sections 34 and 35 of POPIA). In both instances, the additional specific obligations in Part B are applicable.
+      </li>
+      <li>But there are general exemptions from the conditions for Processing (these are contained in sections 36 to 38):
+        <ul>
+          <li>If the Regulator exempts you, which can be done:
 
-    <h3 id="4b">4. Purpose for collection</h3>
-    <p>We may use any of your personal information that you provide to us for the purposes that you indicated when you agreed to provide it to us.</p>
+            <ul>
+              <li>if the public interest in the Processing outweighs, to a substantial degree, any interference with the privacy of the Data Subject that could result from such processing;  and
+              </li>
+              <li>the Processing involves a clear benefit to the Data Subject or a third party that outweighs, to a substantial degree, any interference with the privacy of the Data Subject or third party that could result from such Processing; and
+              </li>
+              <li>If Processing is undertaken for the purpose of discharging a defined function (essentially a function performed by a Public Body or a fraud prevention function).
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
 
-    <h3 id="5b">5. Consent to collection</h3>
-    <p>We will get your consent to collect your personal information in accordance with applicable law when you provide us with it.</p>
+    <h3>Definitions that matter</h3>
 
-    <h3 id="6b">6. Use</h3>
-    <p>You own all your personal information, but give us a right to use it to provide the services to you, monitor your use of the website, and make any improvements to the website and the services for the benefit of all our users. We may use your contact information provided to contact you with product or user research messages. We take the protection of your data very seriously and will always do everything reasonably possible to comply with all relevant laws that affect your data.</p>
+    <h4>Personal Information includes:</h4>
 
-    <h3 id="7b">7. Sharing and disclosure</h3>
-    <p>We may share your personal information with third parties for the purposes of fulfilling our obligations to you. We will not disclose your personal information to third parties for any other reason, unless required to do so for legal reasons or if we have your consent.</p>
 
-    <h3 id="8b">8. Security</h3>
-    <p>Our website is hosted on a secure server and uses reasonable security measures to prevent unauthorized interference by intruders.</p>
+    <ul>
+      <li>certain information that we collect automatically when you visit our website (but you can read our cookie policy her:https://openup.org.za/cookie-policy);</li>
+      <li>certain information collected on submission in relation tous engaging in contractual relationships of different types; </li>
+      <li>public domain personal information (POPIA treats this information quite differently); and</li>
+      <li>
+        optional information that you provide to us voluntarily (see below); but excludes:
+        <ul>
+          <li>information that has been made anonymous so that it does not identify a specific person;</li>
+          <li>permanently de-identified information that does not relate or cannot be traced back to you specifically; and</li>
+          <li>non-personal statistical information collected and compiled by us.</li>
+        </ul>
+      </li>
+    </ul>
 
-    <h3 id="9b">9. Storage</h3>
-		<p>We may store your personal information on servers that are not in South Africa. When doing so, your personal information is transmitted and stored using reasonable security measures to prevent unauthorized access and interference.</p>
-		
-		<h3 id="10b">10. Retention</h3>
-		<p>We will only retain your personal information for as long as is necessary.</p>
+    <h4>Special Personal Information</h4>
 
-		<h3 id="11b">11. Transfer</h3>
-		<p>We may transfer your personal information outside South Africa to a foreign country.</p>
+    <p>This is information relating to religion, race or ethnic origin, trade union membership, political persuasion, health or sex life, biometric information or information relating to the criminal behaviour of a data subject. Depending on the goods or services that you require, we may also collect sensitive personal information (although that is rarely collected).</p>
 
-		<h3 id="12b">12. Updating or removing</h3>
-    <p>You may choose to update or remove the personal information you have submitted to us by contacting us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
+    <h3>Our Personal Privacy Mantra</h3>
+
+    <p>There is a presumption at OpenUp that Personal Information will only be collected by staff when absolutely necessary (in line with the principles of minimality and limiting collection of data to instances where there is a specific purpose for those data), and that there will be a preference for collecting, processing and preserving de-Identified data, to which POPIA will not apply.</p>
+
+    <h3>Our Information Officer</h3>
+
+    <p>Gabriella Razzano is the Information Officer. She can be contacted through the email infoofficer@openup.org.za. The Information Officer’s role is generally to:</p>
+
+    <ul>
+      <li>Develop, implement, monitor and maintain a compliance network;</li>
+      <li>Conduct a Personal Information impact assessment in order to ensure that adequate measures exist to ensure compliance with POPIA;</li>
+      <li>Develop, monitor, and maintain a POPIA manual and make it available to everyone at OpenUp as required of her by sections 14 and 15 of the Promotion of Access to Information Act  (PAIA));</li>
+      <li>Ensure that internal measures are developed together with adequate systems to process requests for, or access to, information; and</li>
+      <li>Conduct (or oversee the conducting of) internal awareness sessions regarding the provisions of POPIA.</li>
+    </ul>
+    <p>Her role is to help everyone at OpenUp stay POPIA-compliant.</p>
+
+    <h3>Why do we have your personal information?</h3>
+
+    <p>We generally collect and process your personal information for various purposes (though each collection has its own purpose), including:</p>
+
+    <ul>
+      <li>Research purposes - we may have requested or gathered your information in the effort to conduct user or academic research as part of our non-profit activities that seek to forward the interests and rights of people in relation to data, technology and innovation;</li>
+      <li>Open data purposes - as part of our service to the country at large, we make open data more accessible to the public - this sometimes includes personal information);</li>
+      <li>Goods or services purposes – such as collecting orders or requests for and providing our goods or services (although because we are not a commercial company, this is not very common and will generally be facilitated by specific agreements);</li>
+      <li>Marketing purposes – such as pursuing lawful related marketing activities (our main channel for this is our quarterly newsletter, and we comply with POPIA in relation to its management);</li>
+      <li>Business purposes – such as internal audit, accounting, business planning, and joint ventures, disposals of business, or other proposed and actual transactions; and</li>
+      <li>Legal purposes – such as handling claims, complying with regulations, completing contracts or pursuing good governance.</li>
+    </ul>
+
+    <p>It is very important to note that, frequently, OpenUp is collecting information not as the responsible party but as the operator. The operator is a third party to whom the processing of personal Information has been outsourced. Despite the processing being outsourced to an operator, the organisation still remains responsible for the operator’s actions in terms of POPIA (for instance, maintaining security). </p>
+
+    <p>When we are the responsible party, OpenUp must ensure that proper agreements are in place to ensure that operators meet the requirements of POPIA. This is a person who processes personal information for OpenUp in terms of a contract or mandate, but is not under the authority of OpenUp, e.g. employees of the courier, auditors, website hosts, marketing forms, etc.</p>
+
+    <h3>What we do with personal information</h3>
+
+    <p>When we are the responsible party, and we have your personal data, we process it on the following lawful bases:</p>
+
+    <ul>
+      <li>Because you gave us your consent to do so. You are able to remove your consent at any time if you have given it to us. You can do this by contacting the Information Officer (see below “How to action your rights”);</li>
+      <li>Because we have a contractual obligation to do so (for instance in terms of a processing agreement with an operator); </li>
+      <li>Because we have a legal obligation to do so (for instance certain employee and tax records); or</li>
+      <li>Because we have a vital or legitimate interest in doing so.</li>
+    </ul>
+
+    <p>We do not participate in any commercial exchanges of personal information in any context.</p>
+
+    <p>So, if we are processing your personal information personal data we commit to do so:</p>
+
+    <ul>
+      <li>lawfully, fairly and transparently;</li>
+      <li>only for a specific purpose that is explicit and legitimate;</li>
+      <li>only as necessary for that purpose;</li>
+      <li>accurately, and keeping it up to date;</li>
+      <li>for no longer than necessary to achieve the purpose; and</li>
+      <li>Securely (read more about how we put those principles into practice in “How we action privacy”.</li>
+    </ul>
+
+    <h3>Your rights</h3>
+
+    <p>As a data subject, you have the following (and some more) rights under the POPIA:</p>
+
+
+
   </div>
 </section>
